--- a/src/broadbean/designer/templates/waveform_designer/instruments.html
+++ b/src/broadbean/designer/templates/waveform_designer/instruments.html
@@ -209,6 +209,15 @@
                             </div>
                         </div>
 
+                        <div class="row mt-2">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="awg-timeout">VISA Timeout (s)</label>
+                                    <input type="number" id="awg-timeout" class="form-control" value="60" min="1" max="300" step="1">
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="form-check mt-2">
                             <input type="checkbox" class="form-check-input" id="awg-flags">
                             <label class="form-check-label" for="awg-flags">Enable Flags</label>
@@ -342,6 +351,15 @@
                                         <option value="high_res">High Resolution</option>
                                         <option value="average">Average</option>
                                     </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row mt-2">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="scope-timeout">VISA Timeout (s)</label>
+                                    <input type="number" id="scope-timeout" class="form-control" value="60" min="1" max="300" step="1">
                                 </div>
                             </div>
                         </div>
