Fixed issue with Manual scope config

--- a/src/broadbean/designer/templates/waveform_designer/instruments.html
+++ b/src/broadbean/designer/templates/waveform_designer/instruments.html
@@ -442,8 +442,8 @@
                                     <div class="form-group">
                                         <label for="horizontal-mode">Mode</label>
                                         <select id="horizontal-mode" class="form-select form-select-sm">
+                                            <option value="auto" selected>Auto</option>
                                             <option value="manual">Manual</option>
-                                            <option value="auto">Auto</option>
                                         </select>
                                     </div>
                                 </div>
