Fixed instructions in upload

--- a/src/broadbean/designer/templates/waveform_designer/upload.html
+++ b/src/broadbean/designer/templates/waveform_designer/upload.html
@@ -90,7 +90,7 @@
                 <div id="scope-capture-plot" class="capture-plot">
                     <div class="plot-placeholder">
                         <i class="fas fa-wave-square"></i>
-                        <p>Select a sequence, then click "Upload & Trigger" to capture waveforms</p>
+                        <p>Select a sequence, then click "Upload to AWG" followed by "Trigger & Capture" to capture waveforms</p>
                     </div>
                 </div>
                 <div id="capture-stats" class="capture-stats" style="display: none;">
